[package]
name = "vec4"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

[dependencies.num]
git = "https://github.com/nathanfaucett/rs-num.git"

[dependencies.vec2]
git = "https://github.com/nathanfaucett/rs-vec2.git"

[dependencies.vec3]
git = "https://github.com/nathanfaucett/rs-vec3.git"
